debug-window: prevent proxy_invalidated_cb to be called after dispose

https://bugzilla.gnome.org/show_bug.cgi?id=692793